--- a/style.css
+++ b/style.css
@@ -1,7 +1,35 @@
+
+
 #navbar {
   background-color:darkblue;
   height: 50px;
 }
+
+#mob-div {
+    display: flex;
+}
+
+
+
+
+#drop-div-3 img {
+    height: 20px;
+}
+
+#drop-div img #test {
+    height: 50px;
+    width: 50px;
+}
+
+#drop-div-2 img {
+    height: 20px;
+}
+
+img {
+    height: 50px;
+    width: auto;
+    border-radius: 50px;
+  }
 
 #jumbotron {
     background-color: aqua;
@@ -32,3 +60,54 @@
   background-color: rgb(255, 0, 170);
   height: 50px;
 }
+
+
+
+
+#test {
+    height: 50px;
+    border-radius: 50%;
+    width: 50px;
+
+}
+
+.image-container {
+    position: relative;
+    display: inline-block;
+}
+
+.circle {
+    width: 20px;
+    height: 20px;
+    background-color: green;/* Colore del cerchio */
+    border: 3px solid #fff; /* Bordo bianco del cerchio */
+    border-radius: 50%; /* Per ottenere la forma di un cerchio */
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.image-bell-container {
+    position: relative;
+    display: flex;
+    background-color: lightgray;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.image-bell-container #bell {
+    width: 50%;
+}
+.circle-bell {
+    width: 20px;
+    height: 20px;
+    background-color: purple;/* Colore del cerchio */
+    border: 3px solid #fff; /* Bordo bianco del cerchio */
+    border-radius: 50%; /* Per ottenere la forma di un cerchio */
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
